# CodeTheorie

./: .gitignore  CMakeLists.txt  README.md
01-viginereplus/: README.md
02-playfair/: README.md
03-adfgvx/: README.md
adfgvx/: 03-OPGAVE-adfgvx.txt  ADFGVX.h  CMakeLists.txt  QuadgramScorer.h  README.md  best_transpo_key.txt  find_transposition.cpp  main.cpp  result.txt  solve_square.cpp
data/: corpus.txt  make_quadgrams.py  spaceless_english_quadgrams.txt
playfair/: 02-OPGAVE-playfair.txt  CMakeLists.txt  Playfair.h  README.md  decrypted_solution.txt  main.cpp  test_input.txt
viginereplus/: 01-OPGAVE-viginereplus.txt  CMakeLists.txt  README.md  main.cpp  vigenereplus_solver.cpp
